--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
 	"private": true,
 	"version": "0.0.0",
 	"dependencies": {
+		"bootstrap": "^5.0.0-beta3",
 		"express": "^4.17.1",
 		"parcel-bundler": "^1.12.4",
+		"popper.js": "^1.16.1",
 		"typescript": "^4.1.5"
 	},
 	"scripts": {
-		"tsc": "tsc"
+		"tsc": "tsc",
+		"dev": "parcel ./src/index.html",
+		"build": "parcel build --public-url ./ ./src/index.html --out-dir build"
 	},
 	"targets": {
 		"browser": {
