--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"dependencies": {
 		"bootstrap": "^5.0.0-beta3",
 		"express": "^4.17.1",
-		"parcel-bundler": "^1.12.4",
+		"parcel": "*",
 		"popper.js": "^1.16.1",
 		"typescript": "^4.1.5"
 	},
