--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
 	"version": "0.0.0",
 	"dependencies": {
 		"bootstrap": "^5.0.0-beta3",
-		"css-what": ">=5.0.1",
 		"express": "^4.17.1",
-		"parcel": "*",
+		"parcel": ">=2.0.0-beta.2",
 		"popper.js": "^1.16.1",
 		"typescript": "^4.1.5"
 	},
